@@ -1,227 +1,147 @@
 package com.trolle4.kafka.exporter.collect;
 
-import io.micrometer.core.instrument.MeterRegistry;
-import io.micrometer.core.instrument.simple.SimpleMeterRegistry;
-import org.apache.kafka.clients.admin.*;
+import io.micrometer.core.instrument.Tags;
+import io.micrometer.prometheusmetrics.PrometheusMeterRegistry;
+import org.apache.kafka.clients.admin.ConsumerGroupListing;
+import org.apache.kafka.clients.admin.ListOffsetsResult;
+import org.apache.kafka.clients.admin.OffsetSpec;
+import org.apache.kafka.clients.admin.TopicDescription;
 import org.apache.kafka.clients.consumer.OffsetAndMetadata;
-import org.apache.kafka.common.KafkaFuture;
 import org.apache.kafka.common.Node;
 import org.apache.kafka.common.TopicPartition;
 import org.apache.kafka.common.TopicPartitionInfo;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.InjectMocks;
 import org.mockito.Mock;
+import org.mockito.Spy;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.util.*;
-import java.util.concurrent.ExecutionException;
-import java.util.concurrent.TimeoutException;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyCollection;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
 class KafkaMetricsCollectorTest {
 
     @Mock
-    private AdminClient adminClient;
+    private PrometheusMeterRegistry meterRegistry;
 
-    private MeterRegistry meterRegistry;
-    private KafkaMetricsCollector collector;
+    @Mock
+    private PrometheusService prometheusService;
+
+    @Mock
+    private AdminClientService adminClientService;
+
+    @Mock
     private KafkaMetricsCollector.CollectorConf collectorConf;
 
-    @BeforeEach
-    void setUp() {
-        meterRegistry = new SimpleMeterRegistry();
-        collectorConf = new KafkaMetricsCollector.CollectorConf();
-        collectorConf.setTopicWhiteListRegex(".*");
-        collectorConf.setTopicBlackListRegex("");
-        collectorConf.setMinTimeBetweenUpdatesMillis(60000);
+    @InjectMocks
+    private KafkaMetricsCollector collector;
 
-        collector = new KafkaMetricsCollector(adminClient, collectorConf);
-    }
 
     @Test
     void testGetTopics() throws Exception {
-        // Setup
-        ListTopicsResult listTopicsResult = mock(ListTopicsResult.class);
-        when(listTopicsResult.names()).thenReturn(
-                KafkaFuture.completedFuture(Set.of("test-topic"))
-        );
-        when(adminClient.listTopics()).thenReturn(listTopicsResult);
+        // Prepare test data
+        var topicNames = Set.of("topic", "topic1", "topic2");
+        var expectedTopicNames = Set.of("topic1");
+        var expectedTopicDescriptions = Map.of("topic1", createTopicDescription("topic1"));
 
-        Node leader = new Node(1, "localhost", 9092);
-        Node replica = new Node(2, "localhost", 9093);
-        TopicPartitionInfo partitionInfo = new TopicPartitionInfo(
-                0, leader, List.of(leader, replica), List.of(leader)
-        );
-
-        TopicDescription topicDescription = new TopicDescription(
-                "test-topic", false, List.of(partitionInfo)
-        );
-
-        DescribeTopicsResult describeTopicsResult = mock(DescribeTopicsResult.class);
-        when(describeTopicsResult.allTopicNames()).thenReturn(
-                KafkaFuture.completedFuture(Map.of("test-topic", topicDescription))
-        );
-        when(adminClient.describeTopics(anyCollection())).thenReturn(describeTopicsResult);
+        // Mock the internal methods
+        doReturn(".+\\d$").when(collectorConf).getTopicWhiteListRegex();
+        doReturn("^.*2$").when(collectorConf).getTopicBlackListRegex();
+        doReturn(topicNames).when(adminClientService).listTopics();
+        doReturn(expectedTopicDescriptions).when(adminClientService).describeTopics(eq(expectedTopicNames));
 
         // Execute
         Map<String, TopicDescription> result = collector.getTopics();
 
         // Verify
-        assertEquals(1, result.size());
-        assertEquals("test-topic", result.keySet().iterator().next());
-        verify(adminClient).listTopics();
-        verify(adminClient).describeTopics(anyCollection());
+        assertNotNull(result);
+        assertEquals(Set.of("topic1"), result.keySet());
+        assertEquals(expectedTopicDescriptions.get("topic1"), result.get("topic1"));
+        assertEquals(expectedTopicDescriptions, result);
+        verify(adminClientService).listTopics();
+        verify(adminClientService).describeTopics(anySet());
     }
 
-    //@Test
-    void testUpdateMetrics() throws Exception {
-        // Setup topic metadata
-        setupTopicMetadata();
 
-        // Setup offsets
-        Map<TopicPartition, ListOffsetsResult.ListOffsetsResultInfo> earliestOffsets = new HashMap<>();
-        Map<TopicPartition, ListOffsetsResult.ListOffsetsResultInfo> latestOffsets = new HashMap<>();
-        TopicPartition tp = new TopicPartition("test-topic", 0);
+    private static TopicDescription createTopicDescription(String topic) {
+        var leader = new Node(1, "localhost", 9092);
+        var replicas = Collections.singletonList(leader);
+        var isr = Collections.singletonList(leader);
 
-        earliestOffsets.put(tp, new ListOffsetsResult.ListOffsetsResultInfo(0L, 0L, Optional.empty()));
-        latestOffsets.put(tp, new ListOffsetsResult.ListOffsetsResultInfo(100L, 0L, Optional.empty()));
-
-        // Mock getOffsets method for both earliest and latest calls
-        when(collector.getOffsets(anyList(), any(OffsetSpec.class)))
-                .thenReturn(earliestOffsets)
-                .thenReturn(latestOffsets);
-
-        // Setup consumer group data
-        ConsumerGroupListing groupListing = new ConsumerGroupListing("test-group", true);
-        when(collector.getConsumerGroups()).thenReturn(List.of(groupListing));
-
-        Map<TopicPartition, OffsetAndMetadata> groupOffsets = new HashMap<>();
-        groupOffsets.put(tp, new OffsetAndMetadata(50L));
-        Map<String, Map<TopicPartition, OffsetAndMetadata>> consumerGroupOffsets = Map.of(
-                "test-group", groupOffsets
-        );
-        when(collector.getConsumerGroupOffsets(anyCollection())).thenReturn(consumerGroupOffsets);
-
-        // Execute
-        collector.updateMetrics();
-
-        // Verify metrics
-        assertEquals(1.0, meterRegistry.get(KafkaMetricsCollector.KAFKA_TOPIC_PARTITIONS)
-                .tag("topic", "test-topic")
-                .gauge()
-                .value());
-
-        assertEquals(100.0, meterRegistry.get(KafkaMetricsCollector.KAFKA_TOPIC_PARTITION_CURRENT_OFFSET)
-                .tag("topic", "test-topic")
-                .tag("partition", "0")
-                .gauge()
-                .value());
-
-        assertEquals(50.0, meterRegistry.get(KafkaMetricsCollector.KAFKA_CONSUMERGROUP_LAG)
-                .tag("consumergroup", "test-group")
-                .tag("topic", "test-topic")
-                .tag("partition", "0")
-                .gauge()
-                .value());
-    }
-
-    private void setupTopicMetadata() throws InterruptedException, ExecutionException, TimeoutException {
-        // Mock listTopics
-        ListTopicsResult listTopicsResult = mock(ListTopicsResult.class);
-        when(listTopicsResult.names()).thenReturn(
-                KafkaFuture.completedFuture(Set.of("test-topic"))
-        );
-        when(adminClient.listTopics()).thenReturn(listTopicsResult);
-
-        // Mock topic description
-        Node leader = new Node(1, "localhost", 9092);
-        Node replica = new Node(2, "localhost", 9093);
-        TopicPartitionInfo partitionInfo = new TopicPartitionInfo(
-                0, leader, List.of(leader, replica), List.of(leader)
-        );
-
-        TopicDescription topicDescription = new TopicDescription(
-                "test-topic", false, List.of(partitionInfo)
-        );
-
-        DescribeTopicsResult describeTopicsResult = mock(DescribeTopicsResult.class);
-        when(describeTopicsResult.allTopicNames()).thenReturn(
-                KafkaFuture.completedFuture(Map.of("test-topic", topicDescription))
-        );
-        when(adminClient.describeTopics(anyCollection())).thenReturn(describeTopicsResult);
+        var partitionInfo = new TopicPartitionInfo(0, leader, replicas, isr);
+        return new TopicDescription(topic, false, Collections.singletonList(partitionInfo));
     }
 
     @Test
-    void testTopicFilteringWithWhitelist() throws Exception {
-        // Setup whitelist to only allow topics starting with "test-"
-        collectorConf.setTopicWhiteListRegex("test-.*");
+    void testCollectTopicMetrics() throws Exception {
+        // Prepare test data
+        var topicDescription = createTopicDescription("topic1");
+        var topicDescriptions = Map.of("topic1", topicDescription);
+        var tagTopic = Tags.of(KafkaMetricsCollector.TAG_TOPIC, "topic1");
+        var tagTopicPartition = Tags.of(KafkaMetricsCollector.TAG_TOPIC, "topic1", KafkaMetricsCollector.TAG_PARTITION, "0");
 
-        ListTopicsResult listTopicsResult = mock(ListTopicsResult.class);
-        when(listTopicsResult.names()).thenReturn(
-                KafkaFuture.completedFuture(Set.of("test-topic", "other-topic"))
-        );
-        when(adminClient.listTopics()).thenReturn(listTopicsResult);
+        var tp = new TopicPartition("topic1", 0);
+        var offsetsMapEarliest =
+                Map.of(tp, new ListOffsetsResult.ListOffsetsResultInfo(25L, 0L, Optional.empty()));
+        var offsetsMapLatest =
+                Map.of(tp, new ListOffsetsResult.ListOffsetsResultInfo(100L, 0L, Optional.empty()));
 
-        Node leader = new Node(1, "localhost", 9092);
-        TopicPartitionInfo partitionInfo = new TopicPartitionInfo(
-                0, leader, List.of(leader), List.of(leader)
-        );
-
-        TopicDescription topicDescription = new TopicDescription(
-                "test-topic", false, List.of(partitionInfo)
-        );
-
-        DescribeTopicsResult describeTopicsResult = mock(DescribeTopicsResult.class);
-        when(describeTopicsResult.allTopicNames()).thenReturn(
-                KafkaFuture.completedFuture(Map.of("test-topic", topicDescription))
-        );
-        when(adminClient.describeTopics(anyCollection())).thenReturn(describeTopicsResult);
+        doReturn(meterRegistry).when(prometheusService).getMeterRegistry();
+        doReturn(offsetsMapEarliest).doReturn(offsetsMapLatest)
+                .when(adminClientService).getOffsets(eq(List.of(tp)), any());
 
         // Execute
-        Map<String, TopicDescription> result = collector.getTopics();
+        var result = collector.collectTopicMetrics(topicDescriptions);
 
-        // Verify that only "test-topic" was included
-        assertEquals(1, result.size());
-        assertEquals("test-topic", result.keySet().iterator().next());
+        // Verify
+        verify(meterRegistry).gauge(eq(KafkaMetricsCollector.KAFKA_TOPIC_PARTITIONS), eq(tagTopic), eq(1));
+        verify(meterRegistry).gauge(eq(KafkaMetricsCollector.KAFKA_TOPIC_PARTITION_CURRENT_OFFSET), eq(tagTopicPartition), eq(100L));
+        verify(meterRegistry).gauge(eq(KafkaMetricsCollector.KAFKA_TOPIC_PARTITION_OLDEST_OFFSET), eq(tagTopicPartition), eq(25L));
+        verify(meterRegistry).gauge(eq(KafkaMetricsCollector.KAFKA_TOPIC_PARTITION_IN_SYNC_REPLICA), eq(tagTopicPartition), eq(1));
+        verify(meterRegistry).gauge(eq(KafkaMetricsCollector.KAFKA_TOPIC_PARTITION_LEADER), eq(tagTopicPartition), eq(1));
+        verify(meterRegistry).gauge(eq(KafkaMetricsCollector.KAFKA_TOPIC_PARTITION_LEADER_IS_PREFERRED), eq(tagTopicPartition), eq(1));
+        verify(meterRegistry).gauge(eq(KafkaMetricsCollector.KAFKA_TOPIC_PARTITION_REPLICAS), eq(tagTopicPartition), eq(1));
+        verify(meterRegistry).gauge(eq(KafkaMetricsCollector.KAFKA_TOPIC_PARTITION_UNDER_REPLICATED_PARTITION), eq(tagTopicPartition), eq(0));
+
     }
 
     @Test
-    void testTopicFilteringWithBlacklist() throws Exception {
-        // Setup blacklist to exclude topics containing "internal"
-        collectorConf.setTopicBlackListRegex(".*internal.*");
+    void testCollectConsumerGroupMetrics() throws Exception {
+        // Prepare test data
+        var tp = new TopicPartition("topic1", 0);
+        var offsetsMapLatest =
+                Map.of(tp, new ListOffsetsResult.ListOffsetsResultInfo(50L, 0L, Optional.empty()));
 
-        ListTopicsResult listTopicsResult = mock(ListTopicsResult.class);
-        when(listTopicsResult.names()).thenReturn(
-                KafkaFuture.completedFuture(Set.of("test-topic", "internal-topic"))
-        );
-        when(adminClient.listTopics()).thenReturn(listTopicsResult);
-
-        Node leader = new Node(1, "localhost", 9092);
-        TopicPartitionInfo partitionInfo = new TopicPartitionInfo(
-                0, leader, List.of(leader), List.of(leader)
+        var consumerGroups = Collections.singletonList(
+                new ConsumerGroupListing("group1", false, Optional.empty())
         );
 
-        TopicDescription topicDescription = new TopicDescription(
-                "test-topic", false, List.of(partitionInfo)
-        );
+        var topicGroupOffsets = Map.of(tp, new OffsetAndMetadata(33L));
+        var consumerGroupOffsets = Map.of("group1", topicGroupOffsets);
 
-        DescribeTopicsResult describeTopicsResult = mock(DescribeTopicsResult.class);
-        when(describeTopicsResult.allTopicNames()).thenReturn(
-                KafkaFuture.completedFuture(Map.of("test-topic", topicDescription))
-        );
-        when(adminClient.describeTopics(anyCollection())).thenReturn(describeTopicsResult);
+        // Mock internal methods
+        doReturn(meterRegistry).when(prometheusService).getMeterRegistry();
+        doReturn(consumerGroups).when(adminClientService).getConsumerGroups();
+        doReturn(consumerGroupOffsets).when(adminClientService).getConsumerGroupOffsets(consumerGroups);
 
         // Execute
-        Map<String, TopicDescription> result = collector.getTopics();
+        collector.collectConsumerGroupMetrics(offsetsMapLatest);
 
-        // Verify that only "test-topic" was included
-        assertEquals(1, result.size());
-        assertEquals("test-topic", result.keySet().iterator().next());
+        // Verify
+        var expectedTags = Tags.of(
+                KafkaMetricsCollector.TAG_CONSUMER_GROUP, "group1",
+                KafkaMetricsCollector.TAG_TOPIC, "topic1",
+                KafkaMetricsCollector.TAG_PARTITION, "0"
+        );
+
+        verify(meterRegistry).gauge(eq(KafkaMetricsCollector.KAFKA_CONSUMERGROUP_CURRENT_OFFSET), eq(expectedTags), eq(33L));
+        verify(meterRegistry).gauge(eq(KafkaMetricsCollector.KAFKA_CONSUMERGROUP_LAG), eq(expectedTags), eq(17L));
+
     }
 }
